src/main/java/com/example/flashsale/error/OrderConflictException.java
package com.example.flashsale.error;

public class OrderConflictException extends RuntimeException {

    public OrderConflictException(String message) {
        super(message);
    }
}
